--- a/paper slide/probabilistic SGS/essay-def.sty
+++ b/paper slide/probabilistic SGS/essay-def.sty
@@ -228,6 +228,34 @@
 \newcommand{\bsyb}{\boldsymbol}
 
 
+\newcommand{\opA}{\operatorname{A}}
+\newcommand{\opB}{\operatorname{B}}
+\newcommand{\opC}{\operatorname{C}}
+\newcommand{\opD}{\operatorname{D}}
+\newcommand{\opE}{\operatorname{E}}
+\newcommand{\opF}{\operatorname{F}}
+\newcommand{\opG}{\operatorname{G}}
+\newcommand{\opH}{\operatorname{H}}
+\newcommand{\opI}{\operatorname{I}}
+\newcommand{\opJ}{\operatorname{J}}
+\newcommand{\opK}{\operatorname{K}}
+\newcommand{\opL}{\operatorname{L}}
+\newcommand{\opM}{\operatorname{M}}
+\newcommand{\opN}{\operatorname{N}}
+\newcommand{\opO}{\operatorname{O}}
+\newcommand{\opP}{\operatorname{P}}
+\newcommand{\opQ}{\operatorname{Q}}
+\newcommand{\opR}{\operatorname{R}}
+\newcommand{\opS}{\operatorname{S}}
+\newcommand{\opT}{\operatorname{T}}
+\newcommand{\opU}{\operatorname{U}}
+\newcommand{\opV}{\operatorname{V}}
+\newcommand{\opW}{\operatorname{W}}
+\newcommand{\opX}{\operatorname{X}}
+\newcommand{\opY}{\operatorname{Y}}
+\newcommand{\opZ}{\operatorname{Z}}
+
+
 \newcommand{\mfro}{\mathfrak{o}}
 \newcommand{\mfrp}{\mathfrak{p}}
 \newcommand{\mfru}{\mathfrak{u}}
